Update readme and other documentation as well as log output to try to make this a bit easier to understand.